--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Mosaic icon</title>
     <link rel="stylesheet" href="/public/custom.css" />
 </head>
 
@@ -48,7 +48,7 @@
             </mosaic-container>
         </mosaic-container>
     </mosaic-page>
-    
+
     <mosaic-hidden-input name="test" value="test"></mosaic-hidden-input>
     <input type="hidden" id="hidden-input" value=""></input>
     <script>
