--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </script>
     <script src="https://cdn.svc.oneadvanced.com/mosaic-components/latest/components-loader.js" async></script>
     <script src="/public/search.js" async></script>
+    <script src="index.js" async></script>
     <mosaic-notification></mosaic-notification>
 </body>
 
